# Swarm_Robot_Search_and_Rescue

./: .gitignore  LICENSE  README.md  do-docs.bash  do-tests.bash
.cache/clangd/index/: camera_subscriber.cpp.32417B7D2015101F.idx  goal_publisher.cpp.1C457E3616423D01.idx  goals.cpp.A738568F4FBAA5ED.idx  goals.hpp.42D96251C1F7CF5C.idx  main.cpp.9674DE623E54C926.idx  search.cpp.2F1709B20A0922EF.idx  search.hpp.175512CAD855B566.idx  test.cpp.C36EF9D8E696CACC.idx
.github/workflows/: run-unit-test-and-upload-codecov.yml
combined_test_coverage/: index-sort-f.html  index-sort-l.html  index.html
combined_test_coverage/multi_robot/src/: goal_publisher.cpp.func-sort-c.html  goal_publisher.cpp.func.html  goal_publisher.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
combined_test_coverage/multi_robot/test/: basic_test.cpp.func-sort-c.html  basic_test.cpp.func.html  basic_test.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
combined_test_coverage/sar/src/: goals.cpp.func-sort-c.html  goals.cpp.func.html  goals.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  search.cpp.func-sort-c.html  search.cpp.func.html  search.cpp.gcov.html
combined_test_coverage/sar/test/: index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html  test.cpp.func-sort-c.html  test.cpp.func.html  test.cpp.gcov.html
results/: cppcheck_multi_robot  cppcheck_sar  cpplint_multi_robot  cpplint_sar
src/detection/: CMakeLists.txt  compile_commands.json
src/detection/test/: CMakeLists.txt
src/multi_robot/: CMakeLists.txt  README.md  compile_commands.json  package.xml
src/multi_robot/.cache/clangd/index/: camera_subscriber.cpp.32417B7D2015101F.idx  goal_publisher.cpp.1C457E3616423D01.idx  publisher_member_function.cpp.4C5BAC859E4E2BFD.idx  subscriber_member_function.cpp.FEB3F8DC5113A447.idx
src/multi_robot/launch/: bringup_launch.py  gazebo.launch.py  localization_launch.py  multi_robot_main.launch.py  multi_robot_spawn.launch.py  navigation2.launch.py  run_demo.launch.py  rviz.launch.py  spawn_turtlebot3.launch.py  standalone_spawn.launch.py  test.launch.py
src/multi_robot/launch/nav2_bringup/: bringup_launch.py  localization_launch.py  slam_launch.py
src/multi_robot/model/turtlebot3_waffle/: model.sdf
src/multi_robot/scripts/: generate_coverage_report.bash
src/multi_robot/src/: camera_subscriber.cpp  goal_publisher.cpp  subscriber_member_function.cpp
src/multi_robot/test/: basic_test.cpp
src/multi_robot/urdf/: gazebo_specific.urdf.xacro  turtlebot3_waffle.urdf  turtlebot3_waffle.urdf.xacro
src/multi_robot/worlds/: person.world
src/sar/: CMakeLists.txt  README.md  compile_commands.json
src/sar/.cache/clangd/index/: goals.cpp.A738568F4FBAA5ED.idx  goals.hpp.42D96251C1F7CF5C.idx  main.cpp.9674DE623E54C926.idx  my_dummy_lib_funct1.cpp.AE5F85EE1275204E.idx  my_dummy_lib_funct2.cpp.85551E934A9E06F2.idx  my_dummy_lib_funct2.hpp.6E2E8965D71F5B00.idx  search.cpp.2F1709B20A0922EF.idx  search.hpp.175512CAD855B566.idx  test.cpp.C36EF9D8E696CACC.idx
src/sar/cmake-modules/: CodeCoverage.cmake
src/sar/include/: goals.hpp  robot.hpp  search.hpp
src/sar/models/: YOLOv5
src/sar/src/: goals.cpp  robot.cpp  search.cpp
src/sar/test/: CMakeLists.txt  test.cpp
